--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,8 @@ install_requires =
 
 [options.extras_require]
 dev =
-    pytest
-    pytest-asyncio
+    pytest==8.3.2
+    pytest-asyncio==0.23.8
 
 [tool:pytest]
 testpaths = tests
